# HospitalCore

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  build.sh  diagrama.md
include/: AlaHospitalar.h  Consulta.h  GerenciadorArquivos.h  HospitalExcecao.h  IAgendavel.h  IGerenciavel.h  Internacao.h  Leito.h  Medico.h  Menu.h  Paciente.h  PreferenciasUsuario.h  SistemaGestao.h  ValidadorDados.h
src/: AlaHospitalar.cpp  Consulta.cpp  Consulta.h  DataHora.h  GerenciadorArquivos.cpp  HospitalExcecao.h  Internacao.cpp  Leito.cpp  Leito.h  Medico.cpp  Menu.cpp  Menu.h  Paciente.cpp  Pessoa.cpp  Pessoa.h  PreferenciasUsuario.cpp  SistemaGestao.cpp  SistemaGestao.h  ValidadorDados.cpp  main.cpp
